--- a/hugo.toml
+++ b/hugo.toml
@@ -2,9 +2,17 @@
 # The base URL of your site (required). This will be prepended to all relative URLs.
 baseURL = "/"
 # Title of your website (required).
-title = "Hyresfel"
+title = "hyresl"
 # Your theme name
 theme = "dot-hugo"
+
+home = "Erik"
+
+logo = "hyresfel"
+
+logo_text = "hyresfel"
+
+
 # Default time zone for time stamps; use any valid tz database name: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
 timeZone = "Europe/Berlin"
 # post pagination
@@ -17,6 +25,9 @@ hasCJKLanguage = false #  If hasCJKLanguage true, auto-detect Chinese/Japanese/K
 # default language
 defaultContentLanguage = 'en'
 defaultContentLanguageInSubdir = false
+
+[params]
+  name= 'Hyresfel'
 
 ########################## Permalinks ############################
 [permalinks.page]
@@ -144,7 +155,7 @@ font_size = "16px" # default is 16px
 # "augmentedFourth": 1.414,
 # "perfectFifth": 1.5,
 # "goldenRatio": 1.618
-font_scale = "1.067" # default is "majorThird": 1.25
+font_scale = "1.2" # default is "majorThird": 1.25
 
 # go to https://fonts.google.com/ to find the font you want to use. select your font and copy only the bold part from the URL. and paste it here.
 # example: "Work+Sans:wght@400;500;600"
