--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -24,7 +24,7 @@ custom_script = ""
 
 # copyright
 theme_copyright = true
-copyright = "Copyright by your company"
+copyright = "upphovsrätt erik alvner, 2024"
 
 # contact info
 [contact_info]
